addign footer for the page

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 	<script src="./assets/js/script.js"></script>
+
+    <!-- footer-->
+    <div class="footer">
+        <h2>Made by Jaya Gudipalli</h2>
+        <p>&copy; 2021 Solution Services, Inc.</p>
+      </div>
 </body>
 
 </html>
